<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:columnCount="2"
    android:rowCount="8"
    tools:context="com.fiap.bestfuel.MainActivity">

    <TextView
        android:id="@+id/gasTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center_horizontal"
        android:padding="@dimen/paddingTextView"
        android:text="@string/gasPriceName"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/gasPercentTextView"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:padding="@dimen/paddingTextView"
        android:text="@string/gasPercentage"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <SeekBar
        android:id="@+id/gasSeekBar"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnWeight="5"
        android:layout_gravity="fill_horizontal"
        android:max="800"
        android:padding="@dimen/paddingTextView"
        android:progress="400" />

    <TextView
        android:id="@+id/etanolTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/paddingTextView"
        android:text="@string/etanolPriceName"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/etanolPercentTextView"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:padding="@dimen/paddingTextView"
        android:text="@string/etanolPercentage"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <SeekBar
        android:id="@+id/etanolSeekBar2"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_columnWeight="5"
        android:layout_gravity="fill_horizontal"
        android:max="800"
        android:padding="@dimen/paddingTextView"
        android:progress="400" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/paddingTextView"
        android:text="@string/resultText"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <ImageView
        android:id="@+id/optImageView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/fuel_image"
        android:paddingBottom="@dimen/paddingBottom"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />
</GridLayout>